[package]
name = "rune-fs"
version = "0.1.5"
authors = ["jimvdl <jimvdlind@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Read-only, low level, virtual file types for the RuneScape file system."
repository = "https://github.com/jimvdl/rune-fs"
documentation = "https://docs.rs/rune-fs"
readme = "README.md"
keywords = ["runescape", "osrs", "rs3"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[features]
rs3 = ["lzma-rs"]

[lib]
name = "runefs"
path = "src/lib.rs"

[dependencies]
nom = "7.1.1"
itertools = "0.11.0"
flate2 = "1.0.24"
bzip2 = "0.4.4"
memmap2 = "0.7.1"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
lzma-rs = { version = "0.3.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
