[package]
name = "rune-fs"
version = "0.1.5"
authors = ["jimvdl <jimvdlind@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Read-only, low level, virtual file types for the RuneScape file system."
repository = "https://github.com/jimvdl/rune-fs"
documentation = "https://docs.rs/rune-fs"
readme = "README.md"
keywords = ["runescape", "osrs", "rs3"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[features]
rs3 = ["dep:lzma-rs"]

[lib]
name = "runefs"
path = "src/lib.rs"

[dependencies]
nom = "8.0.0"
itertools = "0.14"
flate2 = "1.0.27"
bzip2 = "0.6.0"
memmap2 = "0.9.8"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version = "0.5", optional = true }
lzma-rs = { version = "0.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
